# axum

axum/: Cargo.toml
axum/src/: lib.rs
axum/src/extract/: aws_json.rs  mod.rs
axum/src/routing/: aws_json_router.rs  mod.rs
axum/src/routing/tests/: aws_json_router.rs  mod.rs
examples/aws/: Cargo.toml  test.http
examples/aws/src/: main.rs
